--- a/src/update3/org/cict/my_account/MyAccountHome.fxml
+++ b/src/update3/org/cict/my_account/MyAccountHome.fxml
@@ -224,7 +224,7 @@
                                                       <Font size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="COMPUTER">
+                                                <Label text="TERMINAL">
                                                    <font>
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
