--- a/src/update4/org/cict/linked_manager/metro-ui.css
+++ b/src/update4/org/cict/linked_manager/metro-ui.css
@@ -2,6 +2,11 @@
     -fx-text-fill: #FFFFFF;
 }
 
+/*
+This CSS is for academic term settings
+Created 10-06-2017
+*/
+
 /* For Background */
 .metro-base-color{
     -fx-background-color:  #414852;
