--- a/src/update3/org/cict/termcalendar/AcademicTermHome.fxml
+++ b/src/update3/org/cict/termcalendar/AcademicTermHome.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" styleClass="metro-base-color" stylesheets="@metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" styleClass="metro-base-color" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="20.0">
          <children>
@@ -70,9 +71,9 @@
                         <Insets left="10.0" />
                      </padding>
                   </HBox>
-                  <HBox prefWidth="200.0" spacing="30.0">
+                  <HBox prefWidth="200.0" spacing="10.0">
                      <children>
-                        <Label fx:id="lbl_evaluation_status" graphicTextGap="10.0" text="Evaluation System Module is ONLINE" textFill="WHITE">
+                        <Label graphicTextGap="10.0" text="Evaluation Service is" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -84,6 +85,11 @@
                               </ImageView>
                            </graphic>
                         </Label>
+                        <Label fx:id="lbl_evaluation_status" graphicTextGap="10.0" text="ONLINE" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
                      </children>
                      <padding>
                         <Insets left="45.0" />
@@ -91,7 +97,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
                      <children>
-                        <JFXButton fx:id="btn_evaluation" prefWidth="200.0" style="-fx-border-color: #FFFFFF; -fx-background-color: #F791A6;" text="Turn Off" textFill="WHITE">
+                        <JFXButton fx:id="btn_evaluation_service" prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn Off" textFill="WHITE">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -120,9 +126,9 @@
                         <Insets left="10.0" top="20.0" />
                      </padding>
                   </HBox>
-                  <HBox prefWidth="200.0" spacing="30.0">
+                  <HBox prefWidth="200.0" spacing="10.0">
                      <children>
-                        <Label fx:id="lbl_adding_status" graphicTextGap="10.0" text="Adding/Changing System Module is OFFLINE" textFill="WHITE">
+                        <Label graphicTextGap="10.0" text="Adding/Changing Service is" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -134,6 +140,11 @@
                               </ImageView>
                            </graphic>
                         </Label>
+                        <Label fx:id="lbl_adding_status" graphicTextGap="10.0" text="OFFLINE" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
                      </children>
                      <padding>
                         <Insets left="45.0" />
@@ -141,7 +152,7 @@
                   </HBox>
                   <HBox fx:id="btn_adding" alignment="CENTER" prefWidth="200.0" spacing="30.0">
                      <children>
-                        <JFXButton prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn On" textFill="WHITE">
+                        <JFXButton fx:id="btn_adding_service" prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn On" textFill="WHITE">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -170,9 +181,9 @@
                         <Insets left="10.0" top="20.0" />
                      </padding>
                   </HBox>
-                  <HBox prefWidth="200.0" spacing="30.0">
+                  <HBox prefWidth="200.0" spacing="10.0">
                      <children>
-                        <Label fx:id="lbl_encoding_status" graphicTextGap="10.0" text="Grade Encoding System is OFFLINE" textFill="WHITE">
+                        <Label graphicTextGap="10.0" text="Grade Encoding Service is" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -184,6 +195,11 @@
                               </ImageView>
                            </graphic>
                         </Label>
+                        <Label fx:id="lbl_encoding_status" graphicTextGap="10.0" text="OFFLINE" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
                      </children>
                      <padding>
                         <Insets left="45.0" />
@@ -191,7 +207,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
                      <children>
-                        <JFXButton fx:id="btn_encoding" prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn On" textFill="WHITE">
+                        <JFXButton fx:id="btn_encoding_service" prefWidth="200.0" style="-fx-border-color: #FFFFFF;" text="Turn On" textFill="WHITE">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -390,4 +406,8 @@
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <stylesheets>
+      <URL value="@metro-ui.css" />
+      <URL value="@status-change.css" />
+   </stylesheets>
 </VBox>
